--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <tr>
             <td colspan="10" align="center">
                 <br>
-                <input type="button" onclick = "alert('Tải Ram thành công!')" value ="Tải Ram!">
+                <input type="button" onclick = "alert('Làm dell gì có chuyện đấy bạn!')" value ="Tải Ram!">
             </td>
         </tr>
         <tr>
