--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <td colspan="10" align="center">
                 <br>
                 <p>Máy bạn <b>ít Ram</b> , muốn <b>nâng cấp Ram </b>mà lại <b>dell có tiền?</b></p>
-                <p>Đừng lo chúng tôi cho phép các bạn tải Ram miễn phí 100% </p>
+                <p>Đừng lo <b>tairam.ga</b> cho phép các bạn tải Ram miễn phí 100% </p>
                 <p>Hỗ trợ <b>mọi loại máy, hệ diều hành</b></p>
             </td>
         </tr>
