--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tải Ram free cho máy tính!</title>
+    <script data-ad-client="ca-pub-9812403781592966" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <table width = "1500" border="0" cellsapcing = "0" align="center">
