--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tải Ram free cho máy tính!</title>
-    <script data-ad-client="ca-pub-9812403781592966" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <table width = "1500" border="0" cellsapcing = "0" align="center">
@@ -20,7 +19,7 @@
             <td colspan="10" align="center">
                 <br>
                 <p>Máy bạn <b>ít Ram</b> , muốn <b>nâng cấp Ram </b>mà lại <b>dell có tiền?</b></p>
-                <p>Đừng lo <b><a href = "https://tairam.ga/">tairam.ga</a></b> cho phép các bạn tải Ram miễn phí 100% </p>
+                <p>Đừng lo <a href = "https://tairam.ga/">TaiRAM.Ga</a> cho phép các bạn tải Ram miễn phí 100% </p>
                 <p>Hỗ trợ <b>mọi loại máy, hệ diều hành</b></p>
             </td>
         </tr>
@@ -55,12 +54,17 @@
         <tr>
             <td colspan="10" align="center">
                 <br>
-                <input type="button" onclick = "alert('Làm dell gì có chuyện đấy bạn!')" value ="Tải Ram!">
+                <input type="button" onclick = "alert('Tải Ram thành công!')" value ="Tải Ram!">
             </td>
         </tr>
         <tr>
             <td colspan="10">
-                <br><br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="10" align="center">
+                <p><b><a href="https://taissd.ga/" > Tải SSD miễn phí</a></a></b> | <b><a href="https://taivga.ga/" > Tải VGA miễn phí</a></a></p>
             </td>
         </tr>
         <tr>
