--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Tải Ram free cho máy tính!</title>
 </head>
 <body>
@@ -54,12 +57,12 @@
         <tr>
             <td colspan="10" align="center">
                 <br>
-                <input type="button" onclick = "alert('Làm đ có chuyện đó vậy bạn!')" value ="Tải Ram!">
+                <input type="button" onclick = "alert('Tải Ram thành công!')" value ="Tải Ram!">
             </td>
         </tr>
         <tr>
             <td colspan="10">
-                <br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br>
             </td>
         </tr>
         <tr>
