--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Tải RAM miễn phí</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="./css/styles.css">
-        <link rel="stylesheet" href="./css/grid.css">
-        <script src="./js/all.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" href="grid.css">
+        <script src="all.min.js"></script>
     </head>
     <body>
         <header>
@@ -28,32 +28,32 @@
             <div class="pickcol">
                 <div class="row">
                     <div class="col span-1-of-4 picture">
-                        <img src="./img/ram-16gb.jpg" alt="ram4gb">
+                        <img src="ram-16gb.jpg" alt="ram4gb">
                         <p class="p1">
                             4 GB
                         </p>
-                        <input class="btn" type="button" onclick = "alert('Đùa chứ 🤣🤣! Làm gì có chuyện đấy hả bạn trẻ!')" value ="Tải SSD!">
+                        <input class="btn" type="button" onclick = "alert('Đùa chứ 🤣🤣! Làm gì có chuyện đấy hả bạn trẻ!')" value ="Tải xuống!">
                     </div>
                     <div class="col span-1-of-4 picture">
-                        <img src="./img/ram-16gb.jpg" alt="ram8gb">
+                        <img src="ram-16gb.jpg" alt="ram8gb">
                         <p class="p1">
                             8 GB
                         </p>
-                        <input class="btn" type="button" onclick = "alert('Đùa chứ 🤣🤣! Làm gì có chuyện đấy hả bạn trẻ!')" value ="Tải SSD!">
+                        <input class="btn" type="button" onclick = "alert('Đùa chứ 🤣🤣! Làm gì có chuyện đấy hả bạn trẻ!')" value ="Tải xuống!">
                     </div>
                     <div class="col span-1-of-4 picture">
-                        <img src="./img/ram-16gb.jpg" alt="ram16gb">
+                        <img src="ram-16gb.jpg" alt="ram16gb">
                         <p class="p1">
                             16 GB
                         </p>
-                        <input class="btn" type="button" onclick = "alert('Đùa chứ 🤣🤣! Làm gì có chuyện đấy hả bạn trẻ!')" value ="Tải SSD!">
+                        <input class="btn" type="button" onclick = "alert('Đùa chứ 🤣🤣! Làm gì có chuyện đấy hả bạn trẻ!')" value ="Tải xuống!">
                     </div>
                     <div class="col span-1-of-4 picture">
-                        <img src="./img/ram-16gb.jpg" alt="ram32gb">
+                        <img src="ram-16gb.jpg" alt="ram32gb">
                         <p class="p1">
                             32 GB
                         </p>
-                        <input class="btn" type="button" onclick = "alert('Đùa chứ 🤣🤣! Làm gì có chuyện đấy hả bạn trẻ!')" value ="Tải SSD!">
+                        <input class="btn" type="button" onclick = "alert('Đùa chứ 🤣🤣! Làm gì có chuyện đấy hả bạn trẻ!')" value ="Tải xuống!">
                     </div>
                 </div>
             </div>
