--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tải RAM miễn phí</title>
+    <meta name="description" content="Máy của bạn ít RAM và bạn muốn nâng RAM nhưng không muốn bỏ tiền nâng cấp? Đừng lo TaiRAM.ga sẽ giúp bạn tải RAM miễn phí 100%
+    Hỗ trợ RAM cho tẩt cả dòng máy kể cả Macbook">
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Tải RAM miễn phí">
+    <meta itemprop="description" content="Máy của bạn ít RAM và bạn muốn nâng RAM nhưng không muốn bỏ tiền nâng cấp? Đừng lo TaiRAM.ga sẽ giúp bạn tải RAM miễn phí 100%
+    Hỗ trợ RAM cho tẩt cả dòng máy kể cả Macbook">
+    <meta itemprop="image" content="https://tairam.ga/ram-16gb.jpg">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://tairam.ga/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Tải RAM miễn phí">
+    <meta property="og:description" content="Máy của bạn ít RAM và bạn muốn nâng RAM nhưng không muốn bỏ tiền nâng cấp? Đừng lo TaiRAM.ga sẽ giúp bạn tải RAM miễn phí 100%
+    Hỗ trợ RAM cho tẩt cả dòng máy kể cả Macbook">
+    <meta property="og:image" content="https://tairam.ga/ram-16gb.jpg">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tải RAM miễn phí">
+    <meta name="twitter:description" content="Máy của bạn ít RAM và bạn muốn nâng RAM nhưng không muốn bỏ tiền nâng cấp? Đừng lo TaiRAM.ga sẽ giúp bạn tải RAM miễn phí 100%
+    Hỗ trợ RAM cho tẩt cả dòng máy kể cả Macbook">
+    <meta name="twitter:image" content="https://tairam.ga/ram-16gb.jpg">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
